--- a/res/xml/fingerprint_prefs.xml
+++ b/res/xml/fingerprint_prefs.xml
@@ -31,13 +31,13 @@
             android:summary="@string/fod_icon_picker_summary"
             android:fragment="com.raven.lair.fragments.FODIconPickerFragment" />
         
-        <!-- Screen Off FOD -->    
+        <!-- Screen Off FOD
         <com.corvus.support.preferences.SystemSettingSwitchPreference
             android:key="fod_gesture"
             android:title="@string/fod_gesture_title"
             android:summary="@string/fod_gesture_summary"
             android:defaultValue="false"
-            settings:controller="com.android.settings.security.screenlock.ScreenOffFodPreferenceController" />
+            settings:controller="com.android.settings.security.screenlock.ScreenOffFodPreferenceController" -->
 
         <!-- FOD pressed color -->
         <com.corvus.support.preferences.SystemSettingListPreference
