--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -775,4 +775,17 @@
         <item>4</item>
         <item>5</item>
     </string-array>
+
+    <!-- QS Brightness Slider Style  -->
+    <string-array name="qs_brightness_slider_style_entries" translatable="false">
+        <item>@string/qs_slider_default</item>
+        <item>@string/qs_slider_style_1</item>
+        <item>@string/qs_slider_style_2</item>
+    </string-array>
+
+    <string-array name="qs_brightness_slider_style_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
 </resources>
