--- a/res/xml/quick_settings.xml
+++ b/res/xml/quick_settings.xml
@@ -33,11 +33,13 @@
         android:summary="@string/qs_status_background_summary"
         android:defaultValue="false" />
 
-    <com.corvus.support.preferences.SystemSettingSwitchPreference
+    <com.corvus.support.preferences.SystemSettingListPreference
         android:key="qs_brightness_slider_style"
         android:title="@string/qs_brightness_slider_title"
         android:summary="@string/qs_brightness_slider_summary"
-        android:defaultValue="false" />
+        android:entries="@array/qs_brightness_slider_style_entries"
+	    android:entryValues="@array/qs_brightness_slider_style_values"
+        android:defaultValue="0" />
 
     <com.corvus.support.preferences.SystemSettingSeekBarPreference
         android:key="qs_panel_bg_alpha"
